# Rogue

./: .gitignore  Cargo.toml  README.md  combat.md  docs-to-read.md  review.md
assets/: ArthurVista-grass-v1.0.tsx  Sprites.aseprite  level.tmx  player.aseprite  properties_basic.json  readme.md
assets/animations atempts/: player_idle.aseprite  player_states.aseprite
data/enemy/: grunt.json
data/items/: pickaxe.json  structurix.json  sword.json
data/structures/: chest.json  oven.json  workbench.json
data/ui_windows/: basic_oven_window.json  basic_workbench.json  chest_ui_window.json
items/: Secturix.json  inferium.json  mechanae.json  pickaxe.json  structurix.json  sword.json
plan/: Checklist.md  combat.md  docs-to-read.md  game cycle.psd  game_cycle.md  game_loop_advanced.md  game_plan.md  ideas.md
src/: animations.rs  backup_file.txt  cave_generating.rs  colisions.rs  components.rs  development.rs  main.rs  map.rs  messages.rs  mouse_input.rs  movement.rs  utils.rs
src/animations/: animations_setup.rs  components.rs  mod.rs
src/building/: functions.rs  input.rs  mod.rs  setup.rs  systems.rs
src/camera/: systems.rs
src/camera_setup/: camera.rs  mod.rs
src/colision_manager/: colisions.rs  mod.rs
src/combat/: attack_progression.rs  damage_applying.rs  hit_detections.rs  mod.rs
src/crafting/: mod.rs
src/development/: mod.rs  setup.rs  systems.rs
src/enemy/: ai.rs  ai_movement.rs  brain.rs  data.rs  enemy_setup.rs  functions.rs  mod.rs  pathfinding.rs  pathfinding_data.rs  spawner.rs  surrounding.rs  swarm_behavior.rs  systems.rs  vision.rs
(+86 files in other folders)
