[package]
name = "snake"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17"
rand = "0.9.2"
bevy_ecs_tiled = { version = "0.10.0", features = ["user_properties"] }
bevy_rapier2d = { version = "0.32.0", features = [ "simd-stable", "debug-render-2d" ] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3