[package]
name = "snake"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.0", features = ["bevy_dev_tools"] }
futures-lite = "2.6.1"
rand = "0.9.2"
bevy_transform_interpolation = "0.4.0"
serde = "1.0.228"
serde_json = "1.0.149"
noise = "0.9.0"

[features]
prototypes = []

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
